# smart-garden-gateway-doctor

./: Architecture.md  Cargo.toml  README.md
.github/workflows/: main.yml
src/: analyzer.rs  config.rs  cpms.rs  dialog.rs  ipr.rs  lib.rs  main.rs
test_data/: Finding 001 - File not found.md  Finding 002 - RM test firmware flashing failed.txt  Finding 003 - RM flashing follow up errors.md  Finding 004 - U-Boot Net not loading.txt  Finding 005 -failing 2nd selftest run.txt  Finding 006 - Flaky carrier eth0.txt  Finding 007 -Faulty RM with wrong LM-related error message.txt  Finding 008 outdated U-Boot and dead PHY.txt  Finding 009 rm-test-flashing fails, LED stays green.txt  Finding 010 component not found, but RM changed.txt  Finding 011 skipping a bad block.txt
tests/: integration_test.rs  test_cpms.rs  test_ipr.rs
tests/data/: button_stuck.toml  no_issues.toml  no_nand.toml
tests/data/cpms/: gw.json  lm.json
tests/data/ipr/: gw.json  lm.json
