[package]
name = "smart-garden-gateway-boot-analyzer"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
dirs = "5.0.1"
figment = { version = "0.10.11", features = ["toml"] }
inquire = "0.6.2"
reqwest = { version = "0.11.22", features = ["blocking", "default-tls"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serialport = "4.2.2"
thiserror = "1.0.50"
toml = "0.8.2"
url = "2.4.1"

[dev-dependencies]
httptest = "0.15.5"
mockall = "0.11.4"
rstest = "0.18.2"
serde = { version = "1.0.188", features = ["serde_derive"] }
toml = "0.8.0"
